--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=WebApp
 spring.thymeleaf.cache = false
+
+# spring.datasource.driverClassName= com.mysql.jdbc.Driver
+# it recommended me to use this down
+spring.datasource.driverClassName= com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/Customer_Data
+spring.datasource.username = root
+spring.datasource.password =F24689000f
+
+# none,update, create, delete are the choices for ddl-auto
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql =true
+
+
