--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.username = root
 spring.datasource.password =F24689000f
 
 # none,update, create, delete are the choices for ddl-auto
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
+# this is to show and notify the changed status of elements in the booting
 spring.jpa.show-sql =true
 
 
