--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.thymeleaf.cache = false
 # spring.datasource.driverClassName= com.mysql.jdbc.Driver
 # it recommended me to use this down
 spring.datasource.driverClassName= com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/Customer_Data
+spring.datasource.url= jdbc:mysql://localhost:3306/customer_data
 spring.datasource.username = root
 spring.datasource.password =F24689000f
 
