Creating Webpage for users to acces the their data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=WebApp
-spring.thymeleaf.cache = false
+spring.thymeleaf.cache = true
 
 # spring.datasource.driverClassName= com.mysql.jdbc.Driver
 # it recommended me to use this down
@@ -11,6 +11,6 @@ spring.datasource.password =F24689000f
 # none,update, create, delete are the choices for ddl-auto
 spring.jpa.hibernate.ddl-auto = update
 # this is to show and notify the changed status of elements in the booting
-spring.jpa.show-sql =true
+spring.jpa.show-sql = true
 
 
